test/negative/list_wrong_elem.mut
# Negative: append wrong type to list
nums: List[i64] = List[i64]()
append(nums, "hello")
